causaltest web demonstration init

--- a/src/main/resources/templates/demo.html
+++ b/src/main/resources/templates/demo.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head th:include="layout :: htmlhead" th:with="title='用户管理'"></head>
 <body class="layui-layout-body">
 <div class="layui-layout layui-layout-admin">
