--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -4,7 +4,7 @@
 <header th:fragment="header">
     <div class="layui-layout layui-layout-admin">
     <div class="layui-header">
-        <a href="javascript:;" class="layui-hide-xs"><a href="/" style="font-weight: bold;"><div class="layui-logo">后台管理系统</div></a>
+        <a href="javascript:;" class="layui-hide-xs"><a href="/" style="font-weight: bold;"><div class="layui-logo">CausalTest--Benchmarking Causality Semantics of Data Replication</div></a>
         </a>
         <a href="javascript:;" class="layui-hide-xs">
         	<div class="switchMenu" style="display: none;"><i class="fa fa-indent"></i></div>
@@ -13,37 +13,39 @@
             <li class="layui-nav-item">
                 <a href="javascript:;">
                     <img src="/images/logo.jpg" class="layui-nav-img"></img>
-                    <shiro:principal property="sysUserName"></shiro:principal>
+                    <!--shiro:principal property="sysUserName"></shiro:principal-->
                 </a>
                 <dl class="layui-nav-child">
                     <dd id="updUsePwdDd" class="layui-this"><a href="javascript:;" onclick="updateUsePwd();">修改密码</a></dd>
                 </dl>
             </li>
-            <li class="layui-nav-item"><a href="/logout">退出</a></li>
+            <li class="layui-nav-item"><a href="/logout">Exit</a></li>
         </ul>
     </div>
 
     <div class="layui-side layui-bg-black">
         <div class="layui-side-scroll">
             <ul class="layui-nav layui-nav-tree"  lay-filter="test">
-                <!--<li class="layui-nav-item layui-nav-itemed">
-                    <a href="javascript:;">系统管理</a>
+                <<li class="layui-nav-item layui-nav-itemed">
+                    <a href="javascript:;">Data Replication</a>
                     <dl class="layui-nav-child">
-                        <dd><a href="/user/userManage">账号管理</a></dd>
-                        <dd><a href="/role/roleManage">角色管理</a></dd>
-                        <dd><a href="/permission/permissionManage">权限管理</a></dd>
+                        <dd><a href="/database/cassandra">Cassandra</a></dd>
+                        <dd><a href="/database/hbase">HBase</a></dd>
+                        <dd><a href="/database/mongo">MongoDB</a></dd>
+                        <dd><a href="/database/mysql">Mysql-Cluster</a></dd>
+                        <dd><a href="/database/postgres">Postgres-XL</a></dd>
+                        <dd><a href="/database/redis">Redis</a></dd>
+
                     </dl>
                 </li>
                 <li class="layui-nav-item">
-                    <a href="javascript:;">基本设置</a>
+                    <a href="javascript:;">Setting</a>
                     <dl class="layui-nav-child">
-                        <dd><a href="/goodsCategory/goodsCategoryManage">服务类目管理 </a></dd>
-                        <dd><a href="/serviceType/serviceTypeManage">服务类型管理</a></dd>
-                        <dd><a href="/payplatform/payplatManage">支付方式</a></dd>
-                        <dd><a href="/bank/bankManage">银行管理</a></dd>
-                        <dd><a href="/position/positionManage">省市区管理</a></dd>
+                        <dd><a href="/">服务类目管理 </a></dd>
+                        <dd><a href="/">服务类型管理</a></dd>
+
                     </dl>
-                </li>-->
+                </li>>
             </ul>
         </div>
     </div>
