--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -2,14 +2,15 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:fragment="htmlhead">
     <meta charset="utf-8"></meta>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"></meta>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"></meta>
-    <meta name="renderer" content="webkit" />
-    <title>后台管理系统</title>
+    <meta name="renderer" content="webkit">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <title>CausalTest</title>
     <script type="text/javascript" src="/js/jquery/jquery-3.3.1.min.js"></script>
 	<script type="text/javascript" src="/js/jquery/jquery.serializejson.min.js"></script>
-    <link rel="stylesheet" href="/layui/css/layui.css"></link>
+    <link rel="stylesheet" href="/layui/css/layui.css"  media="all">
 	<script src="/layui/layui.js"></script>
-
+    <!--script src="/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="/layui/css/bootstrap.min.css" /-->
 </head>
 </html>
