--- a/src/main/resources/templates/redis.html
+++ b/src/main/resources/templates/redis.html
@@ -15,8 +15,7 @@
             <div class="layui-row">
                 <div class="layui-col-xs9">
                     &nbsp;
-                    <h1 style="padding-top:50px;line-height:2.0;"><shiro:principal property="sysUserName"></shiro:principal>欢迎登录
-                        <span style="font-weight: bold;font-size:28px;">CausalTest</span></a></h1>
+                    <h1> redis </h1>
                 </div>
             </div>
         </div>
