get param from webpage

--- a/src/main/resources/templates/cassandra.html
+++ b/src/main/resources/templates/cassandra.html
@@ -48,7 +48,7 @@
                         </div>
                     </div-->
 
-                    <form class="layui-form" action="">
+                    <form class="layui-form" action="/cmd">
 
                         <div class="layui-form-item">
                             <label class="layui-form-label">Keyspace</label>
@@ -74,8 +74,8 @@
                             <div class="layui-input-block">
                                 <select name="wcl" lay-filter="aihao">
                                     <option value="">Please Set Write Consistency Level</option>
-                                    <option value="0"selected="">ONE</option>
-                                    <option value="1" >ALL</option>
+                                    <option value="0"selected="">One</option>
+                                    <option value="1" >All</option>
 
                                 </select>
                             </div>
@@ -104,7 +104,7 @@
                         <div class="layui-form-item">
                             <label class="layui-form-label">Consistency</label>
                             <div class="layui-input-block">
-                                <select name="website" lay-filter="aihao">
+                                <select name="consistency" lay-filter="aihao">
                                     <option value="">Please Select A Consistency Semantic</option>
                                     <option value="0"selected="">Read Your Write</option>
                                     <option value="1" >Monotonic Read</option>
