--- a/src/main/resources/templates/mongo.html
+++ b/src/main/resources/templates/mongo.html
@@ -14,8 +14,165 @@
         <div class="layui-container">
             <div class="layui-row">
                 <div class="layui-col-xs9">
-                    &nbsp;
-                    <h1> mongodb </h1>
+                    <fieldset class="layui-elem-field layui-field-title" style="margin-top: 20px;">
+                        <legend>MongoDB</legend>
+                    </fieldset>
+
+
+                    <form class="layui-form" action="">
+
+                        <div class="layui-form-item">
+                            <label class="layui-form-label">ReadPreference</label>
+                            <div class="layui-input-block">
+                                <select name="rp" lay-filter="aihao">
+                                    <option value="">Please Set Read Preference</option>
+                                    <option value="0"selected="">Primary</option>
+                                    <option value="1" >Nearest</option>
+                                    <option value="2" >Secondary</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="layui-form-item">
+                            <label class="layui-form-label">ReadConcern</label>
+                            <div class="layui-input-block">
+                                <select name="rc" lay-filter="aihao">
+                                    <option value="">Please Set Read Concern</option>
+                                    <option value="0"selected="">Local</option>
+                                    <option value="1" >Majority</option>
+                                    <option value="2" >Linearizable</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="layui-form-item">
+                            <label class="layui-form-label">WriteConcern</label>
+                            <div class="layui-input-block">
+                                <select name="rc" lay-filter="aihao">
+                                    <option value="">Please Set Read Concern</option>
+                                    <option value="0"selected="">1</option>
+                                    <option value="1" >Majority</option>
+                                    <option value="2" >0</option>
+                                </select>
+                            </div>
+                        </div>
+
+                        <div class="layui-form-item">
+                            <label class="layui-form-label">Website</label>
+                            <div class="layui-input-block">
+                                <select name="website" lay-filter="aihao">
+                                    <option value="">Please Select A Website</option>
+                                    <option value="0"selected="">Twitter</option>
+                                    <option value="1" >Amazon</option>
+                                    <option value="2" >Flickr</option>
+                                </select>
+                            </div>
+                        </div>
+
+                        <div class="layui-form-item">
+                            <label class="layui-form-label">TestTimes</label>
+                            <div class="layui-input-block">
+                                <input type="text" name="count" lay-verify="required" lay-reqtext="NOT NULL" placeholder="Times to execute test, e.g. 100000" autocomplete="off" class="layui-input">
+                            </div>
+                        </div>
+
+
+                        <div class="layui-form-item">
+                            <label class="layui-form-label">Consistency</label>
+                            <div class="layui-input-block">
+                                <select name="consistency" lay-filter="aihao">
+                                    <option value="">Please Select A Consistency Semantic</option>
+                                    <option value="0"selected="">Read Your Write</option>
+                                    <option value="1" >Monotonic Read</option>
+                                    <option value="2" >Monotonic Write</option>
+                                    <option value="3" >Write Follow Read</option>
+                                </select>
+                            </div>
+                        </div>
+
+
+                        <div class="layui-form-item">
+                            <div class="layui-input-block">
+                                <button type="submit" class="layui-btn" lay-submit="" lay-filter="demo1">Submit</button>
+                                <button type="reset" class="layui-btn layui-btn-primary">Reset</button>
+                            </div>
+                        </div>
+                    </form>
+
+
+                    <script>
+                        layui.use(['form', 'layedit', 'laydate'], function(){
+                            var form = layui.form
+                                ,layer = layui.layer
+                                ,layedit = layui.layedit
+                                ,laydate = layui.laydate;
+
+                            //日期
+                            laydate.render({
+                                elem: '#date'
+                            });
+                            laydate.render({
+                                elem: '#date1'
+                            });
+
+                            //创建一个编辑器
+                            var editIndex = layedit.build('LAY_demo_editor');
+
+                            //自定义验证规则
+                            form.verify({
+                                title: function(value){
+                                    if(value.length < 5){
+                                        return '标题至少得5个字符啊';
+                                    }
+                                }
+                                ,pass: [
+                                    /^[\S]{6,12}$/
+                                    ,'密码必须6到12位，且不能出现空格'
+                                ]
+                                ,content: function(value){
+                                    layedit.sync(editIndex);
+                                }
+                            });
+
+                            //监听指定开关
+                            form.on('switch(switchTest)', function(data){
+                                layer.msg('开关checked：'+ (this.checked ? 'true' : 'false'), {
+                                    offset: '6px'
+                                });
+                                layer.tips('温馨提示：请注意开关状态的文字可以随意定义，而不仅仅是ON|OFF', data.othis)
+                            });
+
+                            //监听提交
+                            form.on('submit(demo1)', function(data){
+                                layer.alert(JSON.stringify(data.field), {
+                                    title: '最终的提交信息'
+                                })
+                                return false;
+                            });
+
+                            //表单赋值
+                            layui.$('#LAY-component-form-setval').on('click', function(){
+                                form.val('example', {
+                                    "username": "贤心" // "name": "value"
+                                    ,"password": "123456"
+                                    ,"interest": 1
+                                    ,"like[write]": true //复选框选中状态
+                                    ,"close": true //开关状态
+                                    ,"sex": "女"
+                                    ,"desc": "我爱 layui"
+                                });
+                            });
+
+                            //表单取值
+                            layui.$('#LAY-component-form-getval').on('click', function(){
+                                var data = form.val('example');
+                                alert(JSON.stringify(data));
+                            });
+
+                        });
+                    </script>
+
+
+
+
                 </div>
             </div>
         </div>
