--- a/src/main/resources/templates/mongo.html
+++ b/src/main/resources/templates/mongo.html
@@ -26,9 +26,9 @@
                             <div class="layui-input-block">
                                 <select name="rp" lay-filter="aihao">
                                     <option value="">Please Set Read Preference</option>
-                                    <option value="0"selected="">Primary</option>
-                                    <option value="1" >Nearest</option>
-                                    <option value="2" >Secondary</option>
+                                    <option value="primary"selected="">Primary</option>
+                                    <option value="nearest" >Nearest</option>
+                                    <option value="secondary" >Secondary</option>
                                 </select>
                             </div>
                         </div>
@@ -37,9 +37,9 @@
                             <div class="layui-input-block">
                                 <select name="rc" lay-filter="aihao">
                                     <option value="">Please Set Read Concern</option>
-                                    <option value="0"selected="">Local</option>
-                                    <option value="1" >Majority</option>
-                                    <option value="2" >Linearizable</option>
+                                    <option value="local"selected="">Local</option>
+                                    <option value="majority" >Majority</option>
+                                    <option value="linearizable" >Linearizable</option>
                                 </select>
                             </div>
                         </div>
@@ -48,9 +48,9 @@
                             <div class="layui-input-block">
                                 <select name="rc" lay-filter="aihao">
                                     <option value="">Please Set Read Concern</option>
-                                    <option value="0"selected="">1</option>
-                                    <option value="1" >Majority</option>
-                                    <option value="2" >0</option>
+                                    <option value="W1"selected="">1</option>
+                                    <option value="majority" >Majority</option>
+                                    <option value="0" >0</option>
                                 </select>
                             </div>
                         </div>
@@ -60,9 +60,9 @@
                             <div class="layui-input-block">
                                 <select name="website" lay-filter="aihao">
                                     <option value="">Please Select A Website</option>
-                                    <option value="0"selected="">Twitter</option>
-                                    <option value="1" >Amazon</option>
-                                    <option value="2" >Flickr</option>
+                                    <option value="Twitter"selected="">Twitter</option>
+                                    <option value="Amazon" >Amazon</option>
+                                    <option value="Flickr" >Flickr</option>
                                 </select>
                             </div>
                         </div>
@@ -80,10 +80,10 @@
                             <div class="layui-input-block">
                                 <select name="consistency" lay-filter="aihao">
                                     <option value="">Please Select A Consistency Semantic</option>
-                                    <option value="0"selected="">Read Your Write</option>
-                                    <option value="1" >Monotonic Read</option>
-                                    <option value="2" >Monotonic Write</option>
-                                    <option value="3" >Write Follow Read</option>
+                                    <option value="RYW"selected="">Read Your Write</option>
+                                    <option value="MR" >Monotonic Read</option>
+                                    <option value="MW" >Monotonic Write</option>
+                                    <option value="WFR" >Write Follow Read</option>
                                 </select>
                             </div>
                         </div>
