--- a/src/main/resources/templates/cassandra.html
+++ b/src/main/resources/templates/cassandra.html
@@ -62,8 +62,8 @@
                             <div class="layui-input-block">
                                 <select name="rcl" lay-filter="aihao">
                                     <option value="">Please Set Read Consistency Level</option>
-                                    <option value="0"selected="">ONE</option>
-                                    <option value="1" >ALL</option>
+                                    <option value="ONE"selected="">ONE</option>
+                                    <option value="ALL" >ALL</option>
 
                                 </select>
                             </div>
@@ -74,8 +74,8 @@
                             <div class="layui-input-block">
                                 <select name="wcl" lay-filter="aihao">
                                     <option value="">Please Set Write Consistency Level</option>
-                                    <option value="0"selected="">One</option>
-                                    <option value="1" >All</option>
+                                    <option value="ONE"selected="">One</option>
+                                    <option value="ALL" >All</option>
 
                                 </select>
                             </div>
@@ -86,9 +86,9 @@
                             <div class="layui-input-block">
                                 <select name="website" lay-filter="aihao">
                                     <option value="">Please Select A Website</option>
-                                    <option value="0"selected="">Twitter</option>
-                                    <option value="1" >Amazon</option>
-                                    <option value="2" >Flickr</option>
+                                    <option value="Twitter"selected="">Twitter</option>
+                                    <option value="Amazon" >Amazon</option>
+                                    <option value="Flickr" >Flickr</option>
                                 </select>
                             </div>
                         </div>
@@ -106,10 +106,10 @@
                             <div class="layui-input-block">
                                 <select name="consistency" lay-filter="aihao">
                                     <option value="">Please Select A Consistency Semantic</option>
-                                    <option value="0"selected="">Read Your Write</option>
-                                    <option value="1" >Monotonic Read</option>
-                                    <option value="2" >Monotonic Write</option>
-                                    <option value="3" >Write Follow Read</option>
+                                    <option value="RYW"selected="">Read Your Write</option>
+                                    <option value="MR" >Monotonic Read</option>
+                                    <option value="MW" >Monotonic Write</option>
+                                    <option value="WFR" >Write Follow Read</option>
                                 </select>
                             </div>
                         </div>
