--- a/src/main/resources/templates/hbase.html
+++ b/src/main/resources/templates/hbase.html
@@ -28,9 +28,9 @@
                             <div class="layui-input-block">
                                 <select name="website" lay-filter="aihao">
                                     <option value="">Please Select A Website</option>
-                                    <option value="0"selected="">Twitter</option>
-                                    <option value="1" >Amazon</option>
-                                    <option value="2" >Flickr</option>
+                                    <option value="Twitter"selected="">Twitter</option>
+                                    <option value="Amazon" >Amazon</option>
+                                    <option value="Flickr" >Flickr</option>
                                 </select>
                             </div>
                         </div>
@@ -48,10 +48,10 @@
                             <div class="layui-input-block">
                                 <select name="consistency" lay-filter="aihao">
                                     <option value="">Please Select A Consistency Semantic</option>
-                                    <option value="0"selected="">Read Your Write</option>
-                                    <option value="1" >Monotonic Read</option>
-                                    <option value="2" >Monotonic Write</option>
-                                    <option value="3" >Write Follow Read</option>
+                                    <option value="RYW"selected="">Read Your Write</option>
+                                    <option value="MR" >Monotonic Read</option>
+                                    <option value="MW" >Monotonic Write</option>
+                                    <option value="WFR" >Write Follow Read</option>
                                 </select>
                             </div>
                         </div>
