--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -2,7 +2,7 @@
 <html  xmlns:th="http://www.thymeleaf.org">
 <body>
 <footer th:fragment="footer">
-
+    <p>&copy; ZY1706228 Zhao Le.</p>
 </footer>
 </body>
 </html>
