--- a/src/main/resources/templates/cassandra.html
+++ b/src/main/resources/templates/cassandra.html
@@ -147,6 +147,7 @@
                             <div class="layui-input-block">
                                 <button type="submit" class="layui-btn" lay-submit="" lay-filter="demo1">Submit</button>
                                 <button type="reset" class="layui-btn layui-btn-primary">Reset</button>
+                                <button type="button" class="layui-btn layui-btn-warm" lay-filter="run">Run</button>
                             </div>
                         </div>
                     </form>
