--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html  xmlns:th="http://www.thymeleaf.org">
+
 <body>
 <header th:fragment="header">
     <div class="layui-layout layui-layout-admin">
@@ -12,7 +13,7 @@
         <ul class="layui-nav layui-layout-right">
             <li class="layui-nav-item">
                 <a href="javascript:;">
-                    <img src="/images/logo.jpg" class="layui-nav-img"></img>
+                    <img src="templates/fragments/xiaohui.jpg" class="layui-nav-img"></img>
                     <!--shiro:principal property="sysUserName"></shiro:principal-->
                 </a>
                 <dl class="layui-nav-child">
