--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.w3.org/1999/xhtml">
+
 <head th:fragment="htmlhead">
     <meta charset="utf-8"></meta>
     <meta name="renderer" content="webkit">
@@ -10,6 +12,9 @@
 	<script type="text/javascript" src="/js/jquery/jquery.serializejson.min.js"></script>
     <link rel="stylesheet" href="/layui/css/layui.css"  media="all">
 	<script src="/layui/layui.js"></script>
+    <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
+    <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <!--script src="/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="/layui/css/bootstrap.min.css" /-->
 </head>
