--- a/src/main/resources/templates/cassandra.html
+++ b/src/main/resources/templates/cassandra.html
@@ -48,7 +48,7 @@
                         </div>
                     </div-->
 
-                    <form class="layui-form" action="">
+                    <!--form class="layui-form" action="">
 
                         <div class="layui-form-item">
                             <label class="layui-form-label">Keyspace</label>
@@ -114,7 +114,7 @@
                             </div>
                         </div>
 
-                        <!--div class="layui-form-item">
+                        <div class="layui-form-item">
                             <label class="layui-form-label">复选框</label>
                             <div class="layui-input-block">
                                 <input type="checkbox" name="like[write]" title="写作">
@@ -142,7 +142,7 @@
                           <div class="layui-input-block">
                             <textarea class="layui-textarea layui-hide" name="content" lay-verify="content" id="LAY_demo_editor"></textarea>
                           </div>
-                        </div>-->
+                        </div>
                         <div class="layui-form-item">
                             <div class="layui-input-block">
                                 <button type="submit" class="layui-btn" lay-submit="" lay-filter="demo1">Save</button>
@@ -150,8 +150,105 @@
                                 <button type="button" class="layui-btn layui-btn-warm" lay-filter="run">Run</button>
                             </div>
                         </div>
+                    </form-->
+                    <form class="form-horizontal" role="form" action="/database/cassandra" method="get">
+                        <div class="form-group" >
+                            <label for="rcl" class="col-sm-2 control-label">RCL</label>
+                            <div class="col-md-6">
+                                <select class="form-control" name="rcl" id="rcl">
+                                    <option value=""disabled selected hidden>Please Set Read Consistency Level</option>
+                                    <option value="ONE"selected="">ONE</option>
+                                    <option value="ALL" >ALL</option>
+                                </select>
+                            </div>
+                        </div>
+
+                        <div class="form-group" >
+                            <label for="wcl" class="col-sm-2 control-label">WCL</label>
+                            <div class="col-md-6">
+                                <select class="form-control" name="wcl" id="wcl">
+                                    <option value=""disabled selected hidden>Please Set Write Consistency Level</option>
+                                    <option value="ONE"selected="">ONE</option>
+                                    <option value="ALL" >ALL</option>
+                                </select>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="keyspace" class="col-sm-2 control-label">Keyspace</label>
+                            <div class="col-sm-6">
+                                <input type="text" class="form-control" id="keyspace"  name="keyspace"
+                                       placeholder="Input keyspace name, default: k123">
+                            </div>
+                        </div>
+
+                        <div class="form-group" >
+                            <label for="website" class="col-sm-2 control-label">Website</label>
+                            <div class="col-md-6">
+                                <select class="form-control" name="website" id="website">
+                                    <option value="" disabled selected hidden>Please Select A Website</option>
+                                    <option value="Twitter"selected="">Twitter</option>
+                                    <option value="Amazon" >Amazon</option>
+                                    <option value="Flickr" >Flickr</option>
+                                </select>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="count" class="col-sm-2 control-label">TestTimes</label>
+                            <div class="col-sm-6">
+                                <input type="text" class="form-control" id="count" required pattern="\d*" name="count"
+                                       placeholder="Times to execute test, e.g. 100000">
+                            </div>
+                        </div>
+
+                        <div class="form-group" >
+                            <label for="consistency" class="col-sm-2 control-label">Consistency</label>
+                            <div class="col-md-6">
+                                <select class="form-control" name="consistency" id="consistency">
+                                    <option value="" disabled selected hidden>Please Select A Consistency Semantic</option>
+                                    <option value="RYW"selected="">Read Your Write</option>
+                                    <option value="MR" >Monotonic Read</option>
+                                    <option value="MW" >Monotonic Write</option>
+                                    <option value="WFR" >Write Follow Read</option>
+                                </select>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <div class="col-md-offset-2 col-md-6">
+                                <button type="submit" class="btn  btn-danger" >Save</button>
+                            </div>
+                        </div>
+
                     </form>
 
+                    <form class="form-horizontal" role="form" action="/database/cassandra/run" >
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                Current configuration
+
+                            </div>
+                            <div class="panel-body">
+                                <span th:text="${result}"></span>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <div class="col-md-12">
+                                <button type="submit" class="btn btn-success btn-lg btn-block" >Run</button>
+                            </div>
+                        </div>
+
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                Result
+                            </div>
+                            <div class="panel-body">
+                                <span th:text="${pwdresult}"></span>
+                            </div>
+                        </div>
+                    </form>
 
                     <script>
                         layui.use(['form', 'layedit', 'laydate'], function(){
